# filesize-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml  ubuntu.yml  windows.yml
src/: lib.rs  main.rs  options.rs
src/systems/: fs.rs  mod.rs
