[package]
name = "filesize"
version = "0.1.0"
authors = ["Tom Byrne <tom.byrne@imagination.com>"]
edition = "2018"
description = "Calculates the size of files / folders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tinytemplate = "1.2.1"
serde = "1.0.125"
serde_derive = "1.0.125"
rayon = "0.6.0"